--- a/src/main/resources/aydin/firebasedemo/primary.fxml
+++ b/src/main/resources/aydin/firebasedemo/primary.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="aydin.firebasedemo.PrimaryController">
+<AnchorPane xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="aydin.firebasedemo.PrimaryController">
     <children>
         <VBox alignment="CENTER" prefHeight="373.0" prefWidth="530.0" spacing="20.0">
             <padding>
@@ -19,12 +19,11 @@
             <Label text="CSC325-SW Engineering Student: check out the console window for the output messages..." />
                 <TextField fx:id="nameTextField" promptText="name" />
                 <TextField fx:id="ageTextField" promptText="age" />
+            <TextField fx:id="phoneTextField" layoutX="30.0" layoutY="112.0" promptText="phone" />
                 <HBox alignment="TOP_CENTER" prefHeight="55.0" prefWidth="518.0" spacing="10.0">
                     <children>
                         <Button fx:id="readButton" mnemonicParsing="false" onAction="#readButtonClicked" prefHeight="30.0" prefWidth="80.0" text="Read" />
                         <Button fx:id="writeButton" mnemonicParsing="false" onAction="#writeButtonClicked" prefHeight="30.0" prefWidth="80.0" text="Write" />
-                        <Button fx:id="registerButton" mnemonicParsing="false" onAction="#registerButtonClicked" prefHeight="30.0" prefWidth="80.0" text="Register" />
-                        <Button fx:id="switchSecondaryViewButton" onAction="#switchToSecondary" prefHeight="30.0" prefWidth="180.0" text="Switch to Secondary View" />
                     </children>
                 </HBox>
                 <TextArea fx:id="outputTextArea" prefHeight="218.0" prefWidth="507.0" />
